force-app/main/default/objects/EMS_RM_Job_Application__c/fields/Any_other_offer_in_hand__c.field-meta.xml
<CustomField>
    <fullName>Any_other_offer_in_hand__c</fullName>
    <label>Any other offer in hand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>