force-app/main/default/objects/EMS_RM_Job_Application__c/fields/Job_Opening__c.field-meta.xml
<CustomField>
    <fullName>Job_Opening__c</fullName>
    <label>Job Opening</label>
    <referenceTo>EMS_Job_Opening__c</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>